# sanbootable

./: .gitignore  Makefile.am  README.md  configure.ac  sanbootable.spec
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  postinst  rules
src/: Makefile.am  initrdfail-sanbootable  iscsi.initramfs  open-iscsi-sanbootable.finalrd
src/dracut/: 50-sanbootable.conf  Makefile.am  module-setup.sh  sanbootable-cmdline.sh
src/finalrd/: Makefile.am
src/grub-initrd-fallback/: Makefile.am  initrdfail-sanbootable.conf
src/initramfs/: Makefile.am  iscsi.initramfs
