AC_INIT([sanbootable], [0.1], [mbrown@fensystems.co.uk])
AC_CONFIG_SRCDIR([src/initramfs/iscsi.initramfs])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects tar-ustar])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/finalrd/Makefile
  src/grub-initrd-fallback/Makefile
  src/initramfs/Makefile
])
AC_OUTPUT
