finalrddir = @datadir@/finalrd
grubinitrdfallbackdir = @prefix@/lib/systemd/system/grub-initrd-fallback.service.d
iscsiconfdir = @sysconfdir@/iscsi

dist_bin_SCRIPTS = initrdfail-sanbootable

dist_finalrd_SCRIPTS = open-iscsi-sanbootable.finalrd

dist_grubinitrdfallback_SCRIPTS = initrdfail-sanbootable.conf

dist_iscsiconf_SCRIPTS = iscsi.initramfs
